@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@color/blue" android:state_pressed="true"/>
+    <item android:drawable="@color/colorPrimaryDark" android:state_selected="true"/>
+    <item android:drawable="@color/white" android:state_focused="true"/>
+</selector>
