@@ -6,10 +6,10 @@
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_height="wrap_content"
-    android:background="@color/design_default_color_primary_dark"
+    android:id="@+id/layout_border"
     android:padding="4dp"
-    android:elevation="5dp"
-    android:id="@+id/layout_border">
+    android:elevation="2dp"
+    android:outlineProvider="bounds">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="18dp"
                 android:layout_marginBottom="10dp"
                 android:visibility="gone"/>
 
