@@ -6,4 +6,101 @@
     <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
     <string name="fcm_message">FCM Message</string>
+
+    <string-array name="province_arrays">
+        <item value="กรุงเทพมหานคร">กรุงเทพมหานคร</item>
+        <item value="กระบี่">กระบี่ </item>
+        <item value="กาญจนบุรี">กาญจนบุรี </item>
+        <item value="กาฬสินธุ์">กาฬสินธุ์ </item>
+        <item value="กำแพงเพชร">กำแพงเพชร </item>
+        <item value="ขอนแก่น">ขอนแก่น</item>
+        <item value="จันทบุรี">จันทบุรี</item>
+        <item value="ฉะเชิงเทรา">ฉะเชิงเทรา </item>
+        <item value="ชัยนาท">ชัยนาท </item>
+        <item value="ชัยภูมิ">ชัยภูมิ </item>
+        <item value="ชุมพร">ชุมพร </item>
+        <item value="ชลบุรี">ชลบุรี </item>
+        <item value="เชียงใหม่">เชียงใหม่ </item>
+        <item value="เชียงราย">เชียงราย </item>
+        <item value="ตรัง">ตรัง </item>
+        <item value="ตราด">ตราด </item>
+        <item value="ตาก">ตาก </item>
+        <item value="นครนายก">นครนายก </item>
+        <item value="นครปฐม">นครปฐม </item>
+        <item value="นครพนม">นครพนม </item>
+        <item value="นครราชสีมา">นครราชสีมา </item>
+        <item value="นครศรีธรรมราช">นครศรีธรรมราช </item>
+        <item value="นครสวรรค์">นครสวรรค์ </item>
+        <item value="นราธิวาส">นราธิวาส </item>
+        <item value="น่าน">น่าน </item>
+        <item value="นนทบุรี">นนทบุรี </item>
+        <item value="บึงกาฬ">บึงกาฬ</item>
+        <item value="บุรีรัมย์">บุรีรัมย์</item>
+        <item value="ประจวบคีรีขันธ์">ประจวบคีรีขันธ์ </item>
+        <item value="ปทุมธานี">ปทุมธานี </item>
+        <item value="ปราจีนบุรี">ปราจีนบุรี </item>
+        <item value="ปัตตานี">ปัตตานี </item>
+        <item value="พะเยา">พะเยา </item>
+        <item value="พระนครศรีอยุธยา">พระนครศรีอยุธยา </item>
+        <item value="พังงา">พังงา </item>
+        <item value="พิจิตร">พิจิตร </item>
+        <item value="พิษณุโลก">พิษณุโลก </item>
+        <item value="เพชรบุรี">เพชรบุรี </item>
+        <item value="เพชรบูรณ์">เพชรบูรณ์ </item>
+        <item value="แพร่">แพร่ </item>
+        <item value="พัทลุง">พัทลุง </item>
+        <item value="ภูเก็ต">ภูเก็ต </item>
+        <item value="มหาสารคาม">มหาสารคาม </item>
+        <item value="มุกดาหาร">มุกดาหาร </item>
+        <item value="แม่ฮ่องสอน">แม่ฮ่องสอน </item>
+        <item value="ยโสธร">ยโสธร </item>
+        <item value="ยะลา">ยะลา </item>
+        <item value="ร้อยเอ็ด">ร้อยเอ็ด </item>
+        <item value="ระนอง">ระนอง </item>
+        <item value="ระยอง">ระยอง </item>
+        <item value="ราชบุรี">ราชบุรี</item>
+        <item value="ลพบุรี">ลพบุรี </item>
+        <item value="ลำปาง">ลำปาง </item>
+        <item value="ลำพูน">ลำพูน </item>
+        <item value="เลย">เลย </item>
+        <item value="ศรีสะเกษ">ศรีสะเกษ</item>
+        <item value="สกลนคร">สกลนคร</item>
+        <item value="สงขลา">สงขลา </item>
+        <item value="สมุทรสาคร">สมุทรสาคร </item>
+        <item value="สมุทรปราการ">สมุทรปราการ </item>
+        <item value="สมุทรสงคราม">สมุทรสงคราม </item>
+        <item value="สระแก้ว">สระแก้ว </item>
+        <item value="สระบุรี">สระบุรี </item>
+        <item value="สิงห์บุรี">สิงห์บุรี </item>
+        <item value="สุโขทัย">สุโขทัย </item>
+        <item value="สุพรรณบุรี">สุพรรณบุรี </item>
+        <item value="สุราษฎร์ธานี">สุราษฎร์ธานี </item>
+        <item value="สุรินทร์">สุรินทร์ </item>
+        <item value="สตูล">สตูล </item>
+        <item value="หนองคาย">หนองคาย </item>
+        <item value="หนองบัวลำภู">หนองบัวลำภู </item>
+        <item value="อำนาจเจริญ">อำนาจเจริญ </item>
+        <item value="อุดรธานี">อุดรธานี </item>
+        <item value="อุตรดิตถ์">อุตรดิตถ์ </item>
+        <item value="อุทัยธานี">อุทัยธานี </item>
+        <item value="อุบลราชธานี">อุบลราชธานี</item>
+        <item value="อ่างทอง">อ่างทอง </item>
+        <item value="อื่นๆ">อื่นๆ</item>
+    </string-array>
+
+    <string-array name="color_arrays">
+        <item value="red">Red</item>
+        <item value="blue">Blue</item>
+        <item value="sky_blue">Sky blue</item>
+        <item value="yellow">Yellow</item>
+        <item value="white">White</item>
+        <item value="black">Black</item>
+        <item value="purple">Purple</item>
+        <item value="green">Green</item>
+        <item value="orange">Orange</item>
+        <item value="brown">Brown</item>
+        <item value="pink">Pink</item>
+        <item value="grey">Grey</item>
+    </string-array>
+
 </resources>
